--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+dist/
 
 # Dependency directories
 node_modules
@@ -46,3 +47,8 @@ jspm_packages
 # Yarn Integrity file
 .yarn-integrity
 
+# Environment variables
+.env
+
+# DS_Store
+.DS_Store
