--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "redis": "2.7.1",
+    "serve-favicon": "2.4.3",
     "validator": "8.0.0",
     "winston": "2.3.1"
   },
